# rats-tls-test

./: .gitignore  .gitmodules  README.md
demo_report/: ascii_runtime_measurements
docs/: rats-tls报告.md
docs/rats-tls源码分析/: 1.API接口分析.md  2.core模块分析.md  3.模块加载与注册.md  4.opts中的方法.md
docs/rats-tls的编译与运行过程/: 添加新实例的过程.md  编译与运行流程.md  编译过程.md  运行流程.md
rats-tls-client/: CMakeLists.txt  client.c  client.sh  install.sh
rats-tls-client/include/edl/: rtls_syscalls.h
rats-tls-client/include/internal/: dice.h
rats-tls-client/include/rats-tls/: api.h  compilation.h
rats-tls-server/: CMakeLists.txt  install.sh  server.c  server.sh
rats-tls-server/include/edl/: sgx_ecdsa.edl
rats-tls-server/include/rats-tls/: attester.h  cert.h  log.h
src/: CMakeLists.txt  LibCBOR.cmake
src/api/: rats_tls_callback.c  rats_tls_cleanup.c  rats_tls_init.c  rats_tls_negotiate.c  rats_tls_receive.c  rats_tls_transmit.c
src/attesters/: CMakeLists.txt
src/attesters/api/: enclave_attester_register.c
src/attesters/demoattester/: CMakeLists.txt  cleanup.c  collect_endorsements.c  collect_evidence.c  init.c  main.c  pre_init.c
src/attesters/internal/: enclave_attester.c  rtls_enclave_attester_load_all.c  rtls_enclave_attester_load_single.c  rtls_enclave_attester_select.c
src/attesters/nullattester/: CMakeLists.txt  cleanup.c  collect_endorsements.c  collect_evidence.c  init.c  main.c  pre_init.c
src/core/: claim.c  cpu.c  dice.c  endorsement.c  main.c  rtls_common.c  rtls_core_generate_certificate.c
src/crypto_wrappers/: CMakeLists.txt
src/crypto_wrappers/api/: crypto_wrapper_register.c
src/crypto_wrappers/internal/: crypto_wrapper.c  rtls_crypto_wrapper_load_all.c  rtls_crypto_wrapper_load_single.c  rtls_crypto_wrapper_select.c
src/crypto_wrappers/nullcrypto/: CMakeLists.txt  cleanup.c  gen_cert.c  gen_hash.c  gen_privkey.c  gen_pubkey_hash.c  init.c  main.c  pre_init.c
src/crypto_wrappers/openssl/: CMakeLists.txt  cleanup.c  gen_cert.c  gen_hash.c  gen_privkey.c  gen_pubkey_hash.c  init.c  main.c  openssl.h  pre_init.c
src/include/edl/: sgx_tsgxssl.edl
src/include/internal/: attester.h  verifier.h
src/include/rats-tls/: api.h  attester.h  crypto_wrapper.h  endorsement.h  hash.h  verifier.h
src/tls_wrappers/: CMakeLists.txt
src/tls_wrappers/api/: tls_wrapper_register.c  tls_wrapper_verify_certificate_extension.c
src/tls_wrappers/internal/: rtls_tls_wrapper_load_all.c  rtls_tls_wrapper_load_single.c  rtls_tls_wrapper_select.c  tls_wrapper.c
src/tls_wrappers/nulltls/: CMakeLists.txt  cleanup.c  init.c  main.c  negotiate.c  pre_init.c  receive.c  transmit.c  use_cert.c  use_privkey.c
src/tls_wrappers/openssl/: CMakeLists.txt  cleanup.c  init.c  main.c  negotiate.c  openssl.h  per_thread.c  per_thread.h  pre_init.c  receive.c  transmit.c  un_negotiate.c  use_cert.c  use_privkey.c  x509_openssl10x.c
src/verifiers/: CMakeLists.txt
src/verifiers/api/: enclave_verifier_register.c
src/verifiers/demoverifier/: CMakeLists.txt  cleanup.c  init.c  main.c  pre_init.c  verify_evidence.c
src/verifiers/demoverifier/include/edl/: rtls_socket.h  sgx_dummy.edl  sgx_la.edl
src/verifiers/demoverifier/include/internal/: core.h  cpu.h  crypto_wrapper.h  dice.h  tls_wrapper.h
src/verifiers/demoverifier/include/rats-tls/: api.h  attester.h  cert.h  claim.h  csv.h  err.h  sgx.h  tls_wrapper.h
src/verifiers/internal/: enclave_verifier.c  rtls_enclave_verifier_load_all.c  rtls_enclave_verifier_load_single.c  rtls_enclave_verifier_select.c
src/verifiers/nullverifier/: CMakeLists.txt  cleanup.c  init.c  main.c  pre_init.c  verify_evidence.c
src/verifiers/nullverifier/include/edl/: rtls.edl  rtls_socket.edl  rtls_syscalls.edl
